[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/LevelUI.gd" type="Script" id=1]
[ext_resource path="res://Other/Unutterable-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/Death_Sound.wav" type="AudioStream" id=3]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform float multiplier = 0.2;
uniform float softness = 1.5;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 7 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/multiplier = 0.2
shader_param/softness = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.180392, 0.180392, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.35, 0.315, 0.315, 1 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 76
font_data = ExtResource( 2 )

[node name="LevelUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ViewportContainer" type="ViewportContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Control/ViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Control/ViewportContainer/Viewport"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.4, 0.2 )
cull_mask = 2
fov = 75.0

[node name="Vignette" type="ColorRect" parent="Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 80.0
percent_visible = false

[node name="DeathScreen" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.0784314, 0.0784314, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DeathScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
margin_bottom = -128.0

[node name="DeathMessage" type="Label" parent="Control/DeathScreen/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "[death message here]"
align = 1
valign = 1

[node name="RespawnText" type="Label" parent="Control/DeathScreen/VBoxContainer"]
margin_top = 414.0
margin_right = 1920.0
margin_bottom = 824.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "press space to respawn"
align = 1
valign = 1

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
